--- a/Dockerfile.bot
+++ b/Dockerfile.bot
@@ -2,9 +2,40 @@ FROM python:3.11-slim
 
 WORKDIR /bot
 
-RUN pip install --no-cache-dir requests beautifulsoup4
+# Установка системных зависимостей для Playwright
+RUN apt-get update && apt-get install -y \
+    wget \
+    gnupg \
+    curl \
+    ca-certificates \
+    fonts-liberation \
+    libasound2 \
+    libatk-bridge2.0-0 \
+    libatk1.0-0 \
+    libatspi2.0-0 \
+    libcups2 \
+    libdbus-1-3 \
+    libdrm2 \
+    libgbm1 \
+    libgtk-3-0 \
+    libnspr4 \
+    libnss3 \
+    libwayland-client0 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxfixes3 \
+    libxkbcommon0 \
+    libxrandr2 \
+    xdg-utils \
+    && rm -rf /var/lib/apt/lists/*
+
+# Установка зависимостей Python
+RUN pip install --no-cache-dir playwright beautifulsoup4 requests
+
+# Установка браузеров Playwright
+RUN playwright install chromium
+RUN playwright install-deps chromium
 
 COPY operator2_bot.py .
 
 CMD ["python", "-u", "operator2_bot.py"]
-
