--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - POSTGRES_PASSWORD=apppass
       - DJANGO_SETTINGS_MODULE=cyberpolygon.settings
       - DJANGO_WSGI_MODULE=cyberpolygon.wsgi:application
-      - ALLOWED_HOSTS=localhost,127.0.0.1,172.18.252.50
+      - ALLOWED_HOSTS=*
     expose:
       - "8000"
     ports:
@@ -23,6 +23,7 @@ services:
     restart: unless-stopped
     volumes:
       - static_volume:/app/staticfiles
+      - logs_volume:/app/logs
     networks:
       - app-network
     healthcheck:
@@ -77,7 +78,7 @@ services:
         condition: service_healthy
     environment:
       - APP_URL=http://app:8000
-      - BOT_USERNAME=operator2
+      - BOT_USERNAME=operator2@bank.ru
       - BOT_PASSWORD=password123
       - CHECK_INTERVAL=30
     restart: unless-stopped
@@ -108,6 +109,7 @@ services:
 volumes:
   db_data:
   static_volume:
+  logs_volume:
 
 networks:
   app-network:
